Header, About & Service sections

--- a/index.html
+++ b/index.html
@@ -13,7 +13,109 @@
 </head>
 
 <body>
-
+    <header class="header">
+        <div class="container">
+            <nav class="header-nav row no-gutters">
+                <div class="header-nav__logo">
+                    <img src="images/logo.png" alt="logo">
+                </div>
+                <div class="header-nav__links col-8 col-lg-6 ml-auto justify-content-between">
+                    <a href="#" class="header-nav__link">HOME</a>
+                    <a href="#" class="header-nav__link">ABOUT</a>
+                    <a href="#" class="header-nav__link">SERVICES</a>
+                    <a href="#" class="header-nav__link">BLOG</a>
+                    <a href="#" class="header-nav__link">CONTACT US</a>
+                </div>
+                <div class="header-nav__menu ml-auto align-self-center">
+                    <span></span>
+                </div>
+            </nav>
+            <div class="row">
+                <div class="header-content col-xl-5 col-lg-7">
+                    <h1>Technology Website Made Easy!</h1>
+                    <p>
+                        The most complete field service software for IT &
+                        Mobile Support, Fire Services, Electrical, Maintenance,
+                        HVAC & Security Industries
+                    </p>
+                    <button>SIGN UP FREE</button>
+                </div>
+            </div>
+        </div>
+    </header>
+    <section class="about">
+        <div class="container-fluid">
+            <div class="row justify-content-center">
+                <div class="about__pic col-7 col-xs-12 col-lg-5">
+                    <img src="images/about.jpg" alt="about us">
+                </div>
+                <div class="about__content col-11 col-lg-6 align-self-center">
+                    <h2>What We do?</h2>
+                    <p>
+                        Small businesses and individuals in Teton County, Wyoming wanting the best
+                        of breed technology and information security services. I work with each
+                        customer to determine their needs and integrate multiple platforms to
+                        create a custom solution.
+                    </p>
+                    <button>LEARN MORE</button>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="service">
+        <div class="container">
+            <div class="service-intro mx-auto">
+                <h2>Our Services</h2>
+                <p>
+                    Fieldmagic is the most comprehensive field service & asset management
+                    platform on the market, combining ease of use, performance and flexibility
+                    with out of the box integration with all major accounting and ERP platforms.
+                </p>
+            </div>
+            <div class="service-main">
+                <div class="service-main__item">
+                    <img src="images/service1.png" alt="service">
+                    <h4>Network & Security Engineering</h4>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. industry's standard a
+                        type specimen book</p>
+                    <button>LEARN MORE</button>
+                </div>
+                <div class="service-main__item">
+                    <img src="images/service2.png" alt="service">
+                    <h4>Server & Storage Management</h4>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. industry's standard a
+                        type specimen book</p>
+                    <button>LEARN MORE</button>
+                </div>
+                <div class="service-main__item">
+                    <img src="images/service3.png" alt="service">
+                    <h4>Hardware & Software Installations</h4>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. industry's standard a
+                        type specimen book</p>
+                    <button>LEARN MORE</button>
+                </div>
+                <div class="service-main__item service-main__item_active">
+                    <h4>Join & Stay Connect</h4>
+                    <p>Stay updated with the latest news, stories and discounts.</p>
+                    <input type="email" name="email" id="email" placeholder="Email">
+                </div>
+                <div class="service-main__item">
+                    <img src="images/service5.png" alt="service">
+                    <h4>Cloud Solutions</h4>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. industry's standard a
+                        type specimen book</p>
+                    <button>LEARN MORE</button>
+                </div>
+                <div class="service-main__item">
+                    <img src="images/service6.png" alt="service">
+                    <h4>Hosted Email & Collaboration Suites</h4>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. industry's standard a
+                        type specimen book</p>
+                    <button>LEARN MORE</button>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="https://kit.fontawesome.com/135cfc8609.js" crossorigin="anonymous"></script>
 </body>
 
