--- a/index.html
+++ b/index.html
@@ -76,46 +76,210 @@
                 <div class="service-main__item">
                     <img src="images/service1.png" alt="service">
                     <h4>Network & Security Engineering</h4>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. industry's standard a
+                    <p>Lorem Ipsum is simply dummy text of the printing and type industry. industry's standard a
                         type specimen book</p>
                     <button>LEARN MORE</button>
                 </div>
                 <div class="service-main__item">
                     <img src="images/service2.png" alt="service">
                     <h4>Server & Storage Management</h4>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. industry's standard a
+                    <p>Lorem Ipsum is simply dummy text of the printing and type industry. industry's standard a
                         type specimen book</p>
                     <button>LEARN MORE</button>
                 </div>
                 <div class="service-main__item">
                     <img src="images/service3.png" alt="service">
                     <h4>Hardware & Software Installations</h4>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. industry's standard a
+                    <p>Lorem Ipsum is simply dummy text of the printing and type industry. industry's standard a
                         type specimen book</p>
                     <button>LEARN MORE</button>
                 </div>
                 <div class="service-main__item service-main__item_active">
                     <h4>Join & Stay Connect</h4>
                     <p>Stay updated with the latest news, stories and discounts.</p>
-                    <input type="email" name="email" id="email" placeholder="Email">
+                    <div class="input-wrapper">
+                        <input type="email" name="email" id="email" placeholder="Email">
+                        <a href="#">SUBSCRIBE</a>
+                    </div>
                 </div>
                 <div class="service-main__item">
                     <img src="images/service5.png" alt="service">
                     <h4>Cloud Solutions</h4>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. industry's standard a
+                    <p>Lorem Ipsum is simply dummy text of the printing and type industry. industry's standard a
                         type specimen book</p>
                     <button>LEARN MORE</button>
                 </div>
                 <div class="service-main__item">
                     <img src="images/service6.png" alt="service">
                     <h4>Hosted Email & Collaboration Suites</h4>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. industry's standard a
+                    <p>Lorem Ipsum is simply dummy text of the printing and type industry. industry's standard a
                         type specimen book</p>
                     <button>LEARN MORE</button>
                 </div>
             </div>
         </div>
     </section>
+    <section class="integration">
+        <div class="container">
+            <div class="row justify-content-between align-items-center no-gutters">
+                <div class="integration-main col-12 col-md-5">
+                    <h4>WHY CHOOSE US</h4>
+                    <h2>Make Life With Bright JH</h2>
+                    <p>
+                        Lorem Ipsum is simply dummy text of the printing and type industry. Lorem Ipsum has been
+                        the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
+                        of type and scrambled it to make a type specimen book.
+                    </p>
+                    <button>SIGN UP FREE</button>
+                    <button>WATCH VIDEO</button>
+                </div>
+                <div class="integration-stat col-12 col-md-7 pl-0 pl-lg-5">
+                    <div class="integration-stat__item">
+                        <div class="integration-stat__num col-3">
+                            <h2>20</h2>
+                            <h4>EMPLOYEES</h4>
+                        </div>
+                        <p class="col-12 col-lg-9">Lorem Ipsum is simply dummy text of the printing and type industry.
+                            Lorem Ipsum has
+                            been the industry's standard dummy text ever since it to make a type specimen book.</p>
+                    </div>
+                    <div class="integration-stat__item">
+                        <div class="integration-stat__num col-3">
+                            <h2>220</h2>
+                            <h4>PROJECTS</h4>
+                        </div>
+                        <p class="col-12 col-lg-9">Lorem Ipsum is simply dummy text of the printing and type industry.
+                            Lorem Ipsum
+                            has
+                            been the industry's standard dummy text ever since it to make a type specimen book.</p>
+                    </div>
+                    <div class="integration-stat__item">
+                        <div class="integration-stat__num col-3">
+                            <h2>200</h2>
+                            <h4>CLIENTS</h4>
+                        </div>
+                        <p class="col-12 col-lg-9">Lorem Ipsum is simply dummy text of the printing and type industry.
+                            Lorem Ipsum
+                            has
+                            been the industry's standard dummy text ever since it to make a type specimen book.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="contact">
+        <div class="container">
+            <div class="row align-items-center justify-content-center">
+                <div class="contact__content col-12 col-md-5 order-12 order-md-1">
+                    <h2>24/7 Real Support</h2>
+                    <p>
+                        Feature creep going forward you better eat a reality sandwich
+                        before you walk back in that boardroom can you send me an invite.
+                    </p>
+                    <button>CONTACT SUPPORT</button>
+                </div>
+                <div class="contact__pic col-9 col-md-7 order-1 order-md-12">
+                    <img src="images/contact.jpg" alt="contactus">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="blog">
+        <div class="container">
+            <div class="blog-intro row justify-content-center text-center">
+                <h2>Our Latest Blog</h2>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting
+                    industry. Lorem Ipsum has been the industry's standard dummy text
+                    ever since the 1500s, when an unknown printer took a galley of type
+                    and scrambled it to make a type specimen book.
+                </p>
+            </div>
+            <div class="blog-content row">
+                <div class="blog-content__main col-12 col-md-6">
+                    <div class="blog-content__item">
+                        <img src="images/blog1.jpg" alt="blogpic">
+                        <div class="blog-content__date">20 <br> APR </div>
+                        <div class="blog-content__text">
+                            <h4>Lorem Ipsum is simply dummy <br> text of the printing</h4>
+                            <p>READ MORE</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="blog-content__side col-12 col-md-6 mt-5 mt-md-0">
+                    <div class="blog-content__item d-flex mb-4">
+                        <img src="images/blog2.jpg" alt="blogpic">
+                        <div class="blog-content__date">21 APR</div>
+                        <div class="blog-content__text">
+                            <h4>Lorem Ipsum is simply dummy text of the printing</h4>
+                            <p>READ MORE</p>
+                        </div>
+                    </div>
+                    <div class="blog-content__item d-flex mb-4">
+                        <img src="images/blog3.jpg" alt="blogpic">
+                        <div class="blog-content__date">22 APR</div>
+                        <div class="blog-content__text">
+                            <h4>Lorem Ipsum is simply dummy text of the printing</h4>
+                            <p>READ MORE</p>
+                        </div>
+                    </div>
+                    <div class="blog-content__item d-flex mb-4">
+                        <img src="images/blog4.jpg" alt="blogpic">
+                        <div class="blog-content__date">23 APR</div>
+                        <div class="blog-content__text">
+                            <h4>Lorem Ipsum is simply dummy text of the printing</h4>
+                            <p>READ MORE</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-main row">
+                <div class="footer-item col-12 col-md-6 col-lg-3 mb-5 mb-lg-0">
+                    <img src="images/logo.png" alt="logo">
+                    <p>
+                        Lorem Ipsum is simply dummy text of the printing and typesetting
+                        industry. Lorem Ipsum has been the industry's standard dummy text
+                        ever since the 1500s, when an unknown printer took a galley of type
+                        and scrambled it to make a type specimen book.
+                    </p>
+                </div>
+                <div class="footer-item col-12 col-md-6 col-lg-2">
+                    <h4>Important Links</h4>
+                    <a href="#" class="footer-item__link">Home</a>
+                    <a href="#" class="footer-item__link">About Us</a>
+                    <a href="#" class="footer-item__link">Support Center</a>
+                    <a href="#" class="footer-item__link">Services</a>
+                    <a href="#" class="footer-item__link">Blog</a>
+                    <a href="#" class="footer-item__link">Contact Us</a>
+                    <a href="#" class="footer-item__link">Privace Policy</a>
+                    <a href="#" class="footer-item__link">Terms & Condition</a>
+                </div>
+                <div class="footer-item col-12 col-md-6 col-lg-4">
+                    <h4>Twitter Feed</h4>
+                    <p>we can’t recommend anyone specific, but you can find a list of freelenacers working wit…
+                        <a href="#">https://t.co/fs1gMcMOej</a>
+                    </p>
+                    <p>we can’t recommend anyone specific, but you can find a list of freelenacers working wit…
+                        <a href="#">https://t.co/fs1gMcMOej</a>
+                    </p>
+                </div>
+                <div class="footer-item col-12 col-md-6 col-lg-3">
+                    <h4>Our Offices</h4>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+                    <img src="images/map.png" alt="map">
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid">
+            <div class="row footer-bottom justify-content-center align-items-center">
+                <p>2020 &copy; Copyright Bright JH</p>
+            </div>
+        </div>
+    </footer>
     <script src="https://kit.fontawesome.com/135cfc8609.js" crossorigin="anonymous"></script>
 </body>
 
